# biometric-authentication

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  biometric-authentication  biometric-authentication.service  biometric-drivers.conf  org.freedesktop.policykit.pkexec.biometric-authentication.policy  org.ukui.Biometric.conf  org.ukui.Biometric.xml  org.ukui.biometric.policy
debian/: biometric-auth.install  biometric-auth.postinst  biometric-auth.postrm  biometric-driver-community-multidevice.install  biometric-driver-community-multidevice.postinst  biometric-driver-community-multidevice.prerm  biometric-utils.install  biometric-utils.manpages  changelog  control  copyright  libbiometric-dev.install  libbiometric0.install  libbiometric0.symbols  not-installed  rules  watch
debian/upstream/: metadata
doc/man/: biometric-auth-client.1  biometric-config-tool.8  biometric-device-discover.1
po/: LINGUAS  Makevars  POTFILES.in  bo.po  es.po  fr.po  pt.po  ru.po  zh_CN.po
src/: Makefile.am  biometric-authenticationd.c  biometric-authenticationd.h  biometric-dbus-common.c  biometric-dbus-common.h  dbus_comm.h
src/drivers/: Makefile.am  driver_ids.h
src/drivers/community-multidevice/: Makefile.am  aes_128_cfb.c  aes_128_cfb.h  close.c  close.h  community_define.h  community_ops.c  community_ops.h  driver_internal.c  driver_internal.h  driver_type.h
src/drivers/community-multidevice/drivers/: Makefile.am  aes1610.c  aes1660.c  aes2501.c  aes2550.c  aes2660.c  aes3500.c  aes4000.c  elan.c  etes603.c  fdu2000.c  upeke2.c  upeksonly.c  upektc.c  upektc_img.c  upekts.c  uru4000.c  vcom5s.c  vfs0050.c  vfs101.c  vfs301.c  vfs5011.c
src/lib/: Makefile.am  biometric_common.c  biometric_common.h  biometric_config.c  biometric_config.h  biometric_intl.h  biometric_storage.c  biometric_storage.h  biometric_stroge.c  biometric_version.c  biometric_version.h  libbiometric.pc.in
src/utils/: Makefile.am
src/utils/biometric-auth-client/: Makefile.am  biometric-auth-client.in
src/utils/biometric-config-tool/: Makefile.am  biometric-config-tool-add-driver.c  biometric-config-tool-add-driver.h  biometric-config-tool-disable-driver.c  biometric-config-tool-disable-driver.h  biometric-config-tool-enable-driver.c  biometric-config-tool-enable-driver.h  biometric-config-tool-main.c  biometric-config-tool-main.h  biometric-config-tool-remove-driver.c  biometric-config-tool-remove-driver.h  biometric-config-tool-remove-key.c  biometric-config-tool-remove-key.h  biometric-config-tool-set-key.c  biometric-config-tool-set-key.h
src/utils/biometric-device-discover/: Makefile.am  biometric-device-discover.in
src/utils/biometric-device-discover/community-multidevice/: Makefile.am  community_multidevice_discover_tool.c  community_multidevice_discover_tool.h
